# protocol-contracts-solana

./: .gitignore  .typos.toml  Anchor.toml  Cargo.toml  Makefile  README.md  package-lock.json  package.json  rust-toolchain.toml  tsconfig.json
.github/: CODEOWNERS
.github/workflows/: anchor-test.yml  build.yml  check.yml  coverage.yml  generate-files.yml  nostd.yml  publish-npm.yml  test.yml
dev/keypair/: zeta-token-keypair.json
docs/: gateway.md
go-idl/: go.mod  readme.md
go-idl/generator/: generate.go  main.go
go-idl/types/: idl.go
programs/callable-test/: Cargo.toml
programs/callable-test-2/: Cargo.toml
programs/callable-test-2/src/: lib.rs
programs/callable-test/src/: lib.rs
programs/connected/: Cargo.toml
programs/connected/src/: lib.rs
programs/connectedSPL/: Cargo.toml
programs/connectedSPL/src/: lib.rs
programs/examples/connected/: Cargo.toml
programs/examples/connected/src/: lib.rs
programs/examples/connectedALT/: Cargo.toml
programs/examples/connectedALT/src/: lib.rs
programs/examples/connectedSPL/: Cargo.toml
programs/examples/connectedSPL/src/: lib.rs
programs/examples/connectedSPL/src/instructions/: mod.rs
programs/examples/gateway_upgrade/: Cargo.toml
programs/examples/gateway_upgrade/src/: lib.rs
programs/examples/gateway_upgrade/src/instructions/: admin.rs  deposit.rs  execute.rs
programs/examples/gateway_upgrade/src/utils/: constants.rs  recover_and_verify_eth_address.rs
programs/gateway/: Cargo.toml
programs/gateway/src/: contexts.rs  errors.rs  lib.rs  state.rs  utils.rs
programs/gateway/src/instructions/: admin.rs  deposit.rs  execute.rs  mod.rs  withdraw.rs
programs/gateway/src/utils/: constants.rs  mod.rs  prepare_account_metas.rs  recover_and_verify_eth_address.rs  validate_message.rs  validate_message_hash.rs  verify_and_update_nonce.rs  verify_ata_match.rs  verify_authority.rs  verify_payload_size.rs
programs/gateway_upgrade/: Cargo.toml
programs/gateway_upgrade/src/: lib.rs
programs/protocol-contracts-solana/: Cargo.toml
programs/protocol-contracts-solana/src/: lib.rs
programs/zeta-token/: Cargo.toml  Xargo.toml
programs/zeta-token/src/: contexts.rs  errors.rs  lib.rs  state.rs
programs/zeta-token/src/instructions/: admin.rs  burn.rs  mint.rs  mod.rs
scripts/: docs.sh  fmt.sh  generate_go_bindings.sh  initialize.ts  publish-npm.sh
tests/: config.ts  gateway.test.ts  gateway.ts  ops.ts  ops_transfer_authority_devnet.ts  ops_transfer_authority_mainnet.ts  protocol-contracts-solana.ts  zeta-token.ts
tests/utils/: instruction.ts  util.ts
