[package]
name = "connected"
version = "0.1.0"
description = "Test program used for testing withdraw and call feature"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "connected"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
dev = ["gateway/dev"]

[dependencies]
anchor-lang = { version = "=0.31.1" }
anchor-spl = { version = "=0.31.1" }
spl-associated-token-account = { version = "6.0.0", features = ["no-entrypoint"] }
gateway = { path = "../../gateway", features = ["no-entrypoint", "cpi"] }
