[package]
name = "connected_spl"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "connected_spl"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
devnet = ["raydium-cpmm-cpi/devnet"]

[dependencies]
anchor-lang = { version = "=0.30.1" }
anchor-spl = { version = "=0.30.1", features = ["memo"] }
spl-associated-token-account = "3.0.2"
solana-program = "=1.18.15"

raydium-cpmm-cpi = { git = "https://github.com/raydium-io/raydium-cpi", package = "raydium-cpmm-cpi", branch = "anchor-0.30.1" }
