[package]
name = "connectedSPL"
version = "0.1.0"
description = "Test program used for testing withdraw and call SPL feature"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "connected_spl"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = { version = "=0.31.1" }
anchor-spl = { version = "=0.31.1", features = ["idl-build"] }
spl-associated-token-account = { version = "3.0.2", features = ["no-entrypoint"] }
