[package]
name = "gateway-upgrade"
version = "0.1.0"
description = "program for testing upgrades on solana network"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "gateway_upgrade"

[features]
dev = []
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "=0.31.1" }
anchor-spl = { version = "=0.31.1" }
spl-associated-token-account = { version = "3.0.2", features = ["no-entrypoint"] }
